--- a/langchain/01-OpenAI接入langchain.ipynb
+++ b/langchain/01-OpenAI接入langchain.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='中国的首都是北京。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 7, 'prompt_tokens': 16, 'total_tokens': 23, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': 'fp_808245b034', 'finish_reason': 'stop', 'logprobs': None}, id='run-c29dd9c4-2312-4fae-ae30-7eadc3019308-0', usage_metadata={'input_tokens': 16, 'output_tokens': 7, 'total_tokens': 23, 'input_token_details': {}, 'output_token_details': {}})"
+       "AIMessage(content='中国的首都是北京。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 7, 'prompt_tokens': 16, 'total_tokens': 23, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-55394ca9-4025-4f21-b093-1cc75709f3d1-0', usage_metadata={'input_tokens': 16, 'output_tokens': 7, 'total_tokens': 23, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
      "execution_count": 1,
@@ -51,16 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'标题：胖东来烤鸭，让味蕾沉醉的美味之旅\\n\\n在繁华的都市中，总是有一些小店铺，隐藏着让人心驰神往的美食。而胖东来烤鸭就是其中一家，它位于街角的小巷里，不起眼却让人流连忘返。\\n\\n走进胖东来烤鸭，首先映入眼帘的是一股浓浓的烤鸭香味，让人垂涎欲滴。店内装修简洁大方，一排排烤鸭挂在墙上，金黄诱人。坐下来，服务员热情地为你端上一份烤鸭，外酥内嫩，肉质鲜美，让人忍不住一口接一口。\\n\\n除了烤鸭，胖东来还有许多其他美味的小吃，比如酥皮鲜肉包、炸酱面等等。每一样都是店家精心制作的，口感十分独特。而且价格实惠，让人可以尽情享受美食的同时不心疼钱包。\\n\\n胖东来烤鸭，不仅是一家小店铺，更是一段让味蕾沉醉的美味之旅。每一次光顾，都会让人心情愉悦，口福满满。如果你也是美食爱好者，不妨来胖东来烤鸭品尝一番，相信你也会被它的魅力所吸引。'"
+       "'标题：胖东来烤鸭，让味蕾沉醉的美味\\n\\n在繁华的城市中，有一家让人回味无穷的烤鸭店——胖东来烤鸭。这家店虽然不起眼，但却是许多美食爱好者心中的美味天堂。\\n\\n走进胖东来烤鸭，首先映入眼帘的是烤鸭的诱人香气，让人垂涎欲滴。烤鸭皮金黄酥脆，肉质鲜嫩多汁，每一口都让人感受到满满的幸福。配上店家特制的鸭饼和葱丝，简直是绝配，让人欲罢不能。\\n\\n除了烤鸭，胖东来烤鸭还有许多其他美味的小吃，比如鸭血粉丝、鸭肠火锅等，每一道菜都让人惊艳。店内环境干净整洁，服务员热情周到，让人感受到家的温暖。\\n\\n每次来到胖东来烤鸭，都能让人的味蕾沉醉在美味之中，让人流连忘返。如果你也是美食爱好者，一定要来胖东来烤鸭品尝一番，相信你会爱上这里的美味，爱上这里的服务，爱上这里的一切。让我们一起来享受美食带来的幸福吧！'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "ChatPromptValue(messages=[HumanMessage(content='请根据下面的主题，帮我生成一篇小红书营销短文: 康师傅绿茶', additional_kwargs={}, response_metadata={})])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='标题：尝鲜康师傅绿茶，清爽一夏\\n\\n夏日炎炎，一杯清凉的绿茶是最好的解暑良方。康师傅绿茶，清新爽口，让你在炎炎夏日中保持清爽。\\n\\n康师傅绿茶选用上等绿茶叶，经过精心炒制而成，保留了绿茶的原汁原味，清香扑鼻，回味无穷。每一口都是清凉的享受，让你感受到清爽的味蕾刺激。\\n\\n不仅如此，康师傅绿茶还添加了多种维生素和矿物质，补充身体所需的营养，让你在享受清凉的同时，也能保持健康。无糖低热量的配方，更是适合各个年龄段的人群，让你无负担地畅饮一夏。\\n\\n快来尝鲜康师傅绿茶，清爽一夏，让清凉伴随你的每一天！', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 358, 'prompt_tokens': 47, 'total_tokens': 405, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': 'fp_808245b034', 'finish_reason': 'stop', 'logprobs': None}, id='run-8613d3bc-3727-43c4-aae6-087e7bdc34cb-0', usage_metadata={'input_tokens': 47, 'output_tokens': 358, 'total_tokens': 405, 'input_token_details': {}, 'output_token_details': {}})"
+       "AIMessage(content='标题：发现健康生活的新方式，康师傅绿茶带你一起走进清爽世界\\n\\n大家好，我是小红书的小编，今天我要和大家分享的是康师傅绿茶，一款清爽健康的饮品，让你在忙碌的生活中也能享受一丝清爽。\\n\\n康师傅绿茶选用优质绿茶叶精心制作而成，口感清爽，回味无穷。每一口都能感受到绿茶的清香和滋味，让人仿佛置身于清爽的绿色世界中。而且康师傅绿茶不含添加剂，健康又安心。\\n\\n在这个快节奏的生活中，我们常常忽略了身体的健康。康师傅绿茶提倡健康生活方式，让你在享受美味的同时也能注重身体健康。无论是工作中的疲惫还是生活中的压力，一瓶康师傅绿茶就能让你感受到清爽和舒适。\\n\\n康师傅绿茶，不仅是一款饮品，更是一种生活方式。让我们一起走进清爽的世界，发现健康生活的新方式。让康师傅绿茶成为你生活中的一部分，带给你清爽和健康。\\n\\n快来试试康师傅绿茶，让清爽成为你生活的一部分吧！愿我们每个人都能享受健康生活，活出自己的精彩！', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 520, 'prompt_tokens': 47, 'total_tokens': 567, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-39555d5b-d44f-46b4-a20d-327d6e45988b-0', usage_metadata={'input_tokens': 47, 'output_tokens': 520, 'total_tokens': 567, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,16 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'标题：尝鲜康师傅绿茶，清爽一夏\\n\\n夏日炎炎，一杯清凉的绿茶是最好的解暑良方。康师傅绿茶，清新爽口，让你在炎炎夏日中保持清爽。\\n\\n康师傅绿茶选用上等绿茶叶，经过精心炒制而成，保留了绿茶的原汁原味，清香扑鼻，回味无穷。每一口都是清凉的享受，让你感受到清爽的味蕾刺激。\\n\\n不仅如此，康师傅绿茶还添加了多种维生素和矿物质，补充身体所需的营养，让你在享受清凉的同时，也能保持健康。无糖低热量的配方，更是适合各个年龄段的人群，让你无负担地畅饮一夏。\\n\\n快来尝鲜康师傅绿茶，清爽一夏，让清凉伴随你的每一天！'"
+       "'标题：发现健康生活的新方式，康师傅绿茶带你一起走进清爽世界\\n\\n大家好，我是小红书的小编，今天我要和大家分享的是康师傅绿茶，一款清爽健康的饮品，让你在忙碌的生活中也能享受一丝清爽。\\n\\n康师傅绿茶选用优质绿茶叶精心制作而成，口感清爽，回味无穷。每一口都能感受到绿茶的清香和滋味，让人仿佛置身于清爽的绿色世界中。而且康师傅绿茶不含添加剂，健康又安心。\\n\\n在这个快节奏的生活中，我们常常忽略了身体的健康。康师傅绿茶提倡健康生活方式，让你在享受美味的同时也能注重身体健康。无论是工作中的疲惫还是生活中的压力，一瓶康师傅绿茶就能让你感受到清爽和舒适。\\n\\n康师傅绿茶，不仅是一款饮品，更是一种生活方式。让我们一起走进清爽的世界，发现健康生活的新方式。让康师傅绿茶成为你生活中的一部分，带给你清爽和健康。\\n\\n快来试试康师傅绿茶，让清爽成为你生活的一部分吧！愿我们每个人都能享受健康生活，活出自己的精彩！'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,24 +182,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "标题：探寻康师傅绿茶的清新之美\n",
+      "标题：探寻康师傅绿茶的魅力\n",
       "\n",
-      "大家好，今天我要和大家分享的是我最近发现的一款清新美味的饮品——康师傅绿茶。作为一名资深茶饮爱好者，我对绿茶的要求可谓是相当高，而康师傅的这款绿茶完全符合了我的口味。\n",
+      "大家好，今天我想和大家分享一下我对康师傅绿茶的独特看法。作为一款备受欢迎的饮品，康师傅绿茶不仅口感清爽，而且还有着让人难以抗拒的魅力。\n",
       "\n",
-      "首先，康师傅绿茶选用的是优质绿茶叶，经过精心炒制而成，保留了绿茶的原汁原味，清香扑鼻，让人一口喝下去就仿佛置身于茶园之中。而且，康师傅绿茶不含防腐剂和人工色素，喝起来更加放心和健康。\n",
+      "首先，康师傅绿茶选用的茶叶品质上乘，口感清新自然，让人一口接一口欲罢不能。而且，康师傅绿茶采用的是独特的制茶工艺，保留了茶叶的原汁原味，让人在品尝的过程中仿佛置身于茶园之中。\n",
       "\n",
-      "其次，康师傅绿茶口感清爽，不会过于苦涩或过甜，恰到好处的甜度和苦涩度让人回味无穷。无论是在炎炎夏日还是在寒冷冬季，一瓶康师傅绿茶都能为你带来清凉的享受。\n",
+      "其次，康师傅绿茶不仅口感上佳，而且还有着丰富的营养成分。茶叶中含有丰富的维生素和矿物质，对身体健康有着极大的益处。每一口康师傅绿茶都是对身体的呵护，让人在享受美味的同时也能获得健康。\n",
       "\n",
-      "最后，康师傅绿茶的包装设计简约大方，瓶身透明，让人一眼就能看到清澈的茶水，让人对其质量放心。而且，瓶盖设计独特，方便携带，无论是上班还是出行，都能随时享受到康师傅绿茶的清新美味。\n",
+      "最后，康师傅绿茶的包装设计简约大方，绿色的包装让人一眼就能联想到清新的茶香。无论是携带出门还是放在家中，康师傅绿茶都是一款让人爱不释手的饮品。\n",
       "\n",
-      "总的来说，康师傅绿茶是一款清新美味的饮品，无论是口感还是包装设计都能让人满意。如果你也是绿茶爱好者，不妨试试康师傅绿茶，相信你会爱上它的清新之美。让我们一起探寻康师傅绿茶的独特魅力吧！#康师傅绿茶#清新美味#茶饮爱好者#小红书#营销短文"
+      "总的来说，康师傅绿茶不仅是一款口感清新的饮品，更是一种生活方式的选择。无论是在工作中还是在生活中，一杯康师傅绿茶都能让人感受到清新自然的美好。让我们一起来探寻康师傅绿茶的魅力，享受生活中的每一刻。"
      ]
     }
    ],
