--- a/langchain/02-ChatGLM4接入langchain.ipynb
+++ b/langchain/02-ChatGLM4接入langchain.ipynb
@@ -70,7 +70,7 @@
     {
      "data": {
       "text/plain": [
-       "Completion(model='glm-4-plus', created=1734495189, choices=[CompletionChoice(index=0, finish_reason='stop', message=CompletionMessage(content='以色列的情况比较复杂，不能简单地归结为“喜欢战争”。以下是一些可能影响以色列行为的因素：\\n\\n**历史和安全因素：**\\n\\n*   以色列建国以来，一直面临周边阿拉伯国家的敌对和威胁，经历过多次战争。这种不安全感使得以色列高度重视国防建设和军事力量。\\n*   以色列国土面积狭小，缺乏战略纵深，这使得其在面对安全威胁时更倾向于采取强硬措施。\\n\\n**地缘政治因素：**\\n\\n*   中东地区局势复杂，宗教、民族矛盾交织，以色列与周边国家存在领土争端和意识形态冲突。\\n*   以色列被视为美国在中东的重要盟友，其外交政策受到美国影响。\\n\\n**内部因素：**\\n\\n*   以色列国内政治多元，不同政党对安全和国防政策的立场存在差异。\\n*   以色列社会存在一定的民族主义情绪，对国家安全问题较为敏感。\\n\\n**需要强调的是，以色列并非“喜欢”战争，而是由于其特殊的国情和安全环境，使得其在面对威胁时更倾向于采取强硬立场。同时，以色列也积极参与和平谈判，寻求通过外交途径解决争端。\\n\\n**总结：**\\n\\n以色列的行为是多种因素综合作用的结果，不能简单地归结为“喜欢战争”。理解其行为需要考虑历史、地缘政治、内部因素等多方面的影响。\\n\\n**希望以上信息能帮助你更好地理解以色列的情况。如果你有更多问题，欢迎继续提问！**', role='assistant', tool_calls=None))], request_id='202412181213006d361335965b484e', id='202412181213006d361335965b484e', usage=CompletionUsage(prompt_tokens=29, completion_tokens=284, total_tokens=313))"
+       "Completion(model='glm-4-plus', created=1734574333, choices=[CompletionChoice(index=0, finish_reason='stop', message=CompletionMessage(content='以色列的情况比较复杂，不能简单地归结为“喜欢战争”。以下是一些可能影响以色列军事行动的因素：\\n\\n1. **历史背景**：以色列成立于1948年，建国初期就经历了多次战争，如1948年的独立战争、1967年的六日战争和1973年的赎罪日战争等。这些战争在很大程度上塑造了以色列的国家意识和安全政策。\\n\\n2. **地缘政治**：以色列位于中东地区，周围有许多与其关系紧张的阿拉伯国家。这种地理位置使得以色列在安全问题上始终保持高度警惕。\\n\\n3. **安全威胁**：以色列面临来自多个方向的威胁，包括恐怖主义、火箭攻击和敌对国家的军事威胁。为了保护国家安全，以色列不得不采取强硬的军事措施。\\n\\n4. **国内政治**：以色列的政治体系中，安全问题一直是核心议题。政治领导人往往需要在国家安全问题上表现出强硬立场，以获得选民的支持。\\n\\n5. **宗教和意识形态**：犹太教在以色列社会中占有重要地位，某些宗教和意识形态因素也可能影响其对外政策。\\n\\n6. **国际支持**：以色列在很大程度上依赖美国的军事和政治支持，这也使其在地区冲突中更具底气。\\n\\n需要注意的是，以上因素并不代表以色列“喜欢”战争，而是说明其面临复杂的安全环境和多重压力，导致其频繁采取军事行动。每个国家和地区的冲突都有其独特的历史和现实背景，需要全面、客观地分析。\\n\\n如果你有更具体的问题或需要更详细的解释，欢迎继续提问！', role='assistant', tool_calls=None))], request_id='20241219101205081f1b9c4fe8492d', id='20241219101205081f1b9c4fe8492d', usage=CompletionUsage(prompt_tokens=29, completion_tokens=298, total_tokens=327))"
       ]
      },
      "execution_count": 1,
@@ -110,7 +110,7 @@
     {
      "data": {
       "text/plain": [
-       "'以色列的情况比较复杂，不能简单地归结为“喜欢战争”。以下是一些可能影响以色列行为的因素：\\n\\n**历史和安全因素：**\\n\\n*   以色列建国以来，一直面临周边阿拉伯国家的敌对和威胁，经历过多次战争。这种不安全感使得以色列高度重视国防建设和军事力量。\\n*   以色列国土面积狭小，缺乏战略纵深，这使得其在面对安全威胁时更倾向于采取强硬措施。\\n\\n**地缘政治因素：**\\n\\n*   中东地区局势复杂，宗教、民族矛盾交织，以色列与周边国家存在领土争端和意识形态冲突。\\n*   以色列被视为美国在中东的重要盟友，其外交政策受到美国影响。\\n\\n**内部因素：**\\n\\n*   以色列国内政治多元，不同政党对安全和国防政策的立场存在差异。\\n*   以色列社会存在一定的民族主义情绪，对国家安全问题较为敏感。\\n\\n**需要强调的是，以色列并非“喜欢”战争，而是由于其特殊的国情和安全环境，使得其在面对威胁时更倾向于采取强硬立场。同时，以色列也积极参与和平谈判，寻求通过外交途径解决争端。\\n\\n**总结：**\\n\\n以色列的行为是多种因素综合作用的结果，不能简单地归结为“喜欢战争”。理解其行为需要考虑历史、地缘政治、内部因素等多方面的影响。\\n\\n**希望以上信息能帮助你更好地理解以色列的情况。如果你有更多问题，欢迎继续提问！**'"
+       "'以色列的情况比较复杂，不能简单地归结为“喜欢战争”。以下是一些可能影响以色列军事行动的因素：\\n\\n1. **历史背景**：以色列成立于1948年，建国初期就经历了多次战争，如1948年的独立战争、1967年的六日战争和1973年的赎罪日战争等。这些战争在很大程度上塑造了以色列的国家意识和安全政策。\\n\\n2. **地缘政治**：以色列位于中东地区，周围有许多与其关系紧张的阿拉伯国家。这种地理位置使得以色列在安全问题上始终保持高度警惕。\\n\\n3. **安全威胁**：以色列面临来自多个方向的威胁，包括恐怖主义、火箭攻击和敌对国家的军事威胁。为了保护国家安全，以色列不得不采取强硬的军事措施。\\n\\n4. **国内政治**：以色列的政治体系中，安全问题一直是核心议题。政治领导人往往需要在国家安全问题上表现出强硬立场，以获得选民的支持。\\n\\n5. **宗教和意识形态**：犹太教在以色列社会中占有重要地位，某些宗教和意识形态因素也可能影响其对外政策。\\n\\n6. **国际支持**：以色列在很大程度上依赖美国的军事和政治支持，这也使其在地区冲突中更具底气。\\n\\n需要注意的是，以上因素并不代表以色列“喜欢”战争，而是说明其面临复杂的安全环境和多重压力，导致其频繁采取军事行动。每个国家和地区的冲突都有其独特的历史和现实背景，需要全面、客观地分析。\\n\\n如果你有更具体的问题或需要更详细的解释，欢迎继续提问！'"
       ]
      },
      "execution_count": 2,
@@ -138,23 +138,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GLM-4 是基于智谱 AI 公司训练的语言模型 GLM-130B 开发的，它使用了 1300 亿个参数进行训练。GLM-4 的原理和 GLM-130B 相同，都是基于 Transformer 模型，Transformer 模型是一种基于自注意力机制的深度神经网络模型，经常用于处理序列数据。\n",
+      "GLM-4是一种基于深度学习的大型语言模型，其原理主要基于Transformer架构。Transformer是一种自注意力机制（self-attention）的深度神经网络模型，广泛应用于自然语言处理领域。以下是GLM-4的一些核心原理和特点：\n",
       "\n",
-      "我具体介绍一下 GLM-4 的原理：\n",
+      "### 核心原理\n",
       "\n",
-      "1. **Transformer 模型**：GLM-4 的基础是 Transformer 模型，该模型通过自注意力机制来捕捉序列数据中的长距离依赖关系。\n",
+      "1. **自注意力机制**：\n",
+      "   - 自注意力机制允许模型在处理输入序列时，能够关注到序列中的不同部分，从而捕捉长距离依赖关系。\n",
+      "   - 通过计算序列中每个词与其他所有词的关联程度，生成一个注意力权重分布，用于加权输入信息。\n",
       "\n",
-      "2. **自注意力机制**：自注意力机制允许模型在处理每个词时，都能够考虑到序列中的其他所有词，并根据它们的重要性赋予不同的权重。\n",
+      "2. **多头注意力**：\n",
+      "   - GLM-4使用多头注意力机制，将输入序列分割成多个头，每个头关注不同的信息，最后将多个头的输出拼接起来，以获得更丰富的表示。\n",
       "\n",
-      "3. **预训练和微调**：GLM-4 首先在大规模的文本数据上进行预训练，学习语言的通用表示，然后在特定任务上进行微调，以适应具体的下游任务。\n",
+      "3. **前馈神经网络**：\n",
+      "   - 在自注意力层之后，GLM-4使用前馈神经网络对注意力层的输出进行进一步的非线性变换。\n",
       "\n",
-      "4. **多任务学习**：GLM-4 支持多任务学习，可以同时处理多种不同的语言任务，如文本分类、命名实体识别、问答等。\n",
+      "4. **位置编码**：\n",
+      "   - 为了保留序列中词的位置信息，GLM-4引入位置编码，将位置信息与词的嵌入向量相加。\n",
       "\n",
-      "5. **参数规模**：GLM-4 使用了 1300 亿个参数，这使得它能够捕捉到非常复杂的语言模式和知识。\n",
+      "5. **预训练与微调**：\n",
+      "   - GLM-4首先在大规模文本数据上进行预训练，学习通用的语言表示。\n",
+      "   - 预训练完成后，可以在特定任务上进行微调，以适应具体的应用场景。\n",
       "\n",
-      "6. **数据多样性**：在训练过程中，GLM-4 使用了来自互联网的多种文本数据，包括网页、书籍、新闻、文章等，以提高模型的泛化能力。\n",
+      "### 参数量\n",
       "\n",
-      "总的来说，GLM-4 通过大规模的参数和多样化的训练数据，结合强大的 Transformer 模型和自注意力机制，实现了对自然语言的深度理解和生成能力。"
+      "GLM-4的具体参数量可能因版本和具体实现而有所不同。一般来说，大型语言模型的参数量可以从几十亿到几千亿不等。例如，一些常见的参数规模包括：\n",
+      "\n",
+      "- **10B（100亿参数）**\n",
+      "- **30B（300亿参数）**\n",
+      "- **130B（1300亿参数）**\n",
+      "\n",
+      "具体的参数量需要参考官方发布的详细信息或相关文献。\n",
+      "\n",
+      "### 训练数据\n",
+      "\n",
+      "GLM-4的训练数据通常包括大量的文本语料库，可能涵盖书籍、文章、网页等多种类型的文本数据。这些数据经过清洗和预处理后，用于模型的预训练。\n",
+      "\n",
+      "如果你需要更详细的技术细节或具体的参数量信息，建议查阅GLM-4的官方文档或相关研究论文。"
      ]
     }
    ],
@@ -184,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='中国并没有对美国构成威胁。相反，中国一直致力于和平发展，推动构建人类命运共同体。中国坚持独立自主的和平外交政策，始终不渝走和平发展道路，始终不渝奉行互利共赢的开放战略，愿意在和平共处五项原则的基础上同所有国家建立和发展友好合作关系，推动建设持久和平、共同繁荣的和谐世界。\\n\\n同时，中国也积极参与国际事务，为解决全球性问题贡献了中国智慧和力量。例如，在应对气候变化、打击恐怖主义、维护国际和平与安全等方面，中国都发挥了重要作用。\\n\\n因此，中国并没有对美国构成威胁，而是致力于同美国等所有国家建立和发展友好合作关系，共同推动世界的和平、稳定与发展。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 144, 'prompt_tokens': 12, 'total_tokens': 156, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'glm-4-plus', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-85ccd562-e43f-4118-969b-dedcc5cc5240-0', usage_metadata={'input_tokens': 12, 'output_tokens': 144, 'total_tokens': 156, 'input_token_details': {}, 'output_token_details': {}})"
+       "AIMessage(content='美国对中国大蒜的安全担忧主要源于以下几个方面的考虑：\\n\\n1. **贸易保护主义**：美国有时会采取贸易保护措施来保护本国农业产业。通过提高进口门槛，例如设置严格的安全标准和质量要求，可以有效限制中国大蒜的进口，从而保护美国本土大蒜种植者的利益。\\n\\n2. **食品安全标准**：美国对进口食品有非常严格的安全标准。过去曾发生过一些食品安全事件，导致美国对中国农产品（包括大蒜）的信任度下降。美国可能会担心中国大蒜在生产、加工、储存和运输过程中不符合其食品安全标准。\\n\\n3. **农药残留问题**：美国可能会担心中国大蒜中存在农药残留超标的问题。由于农业生产方式和监管体系的差异，美国可能会认为中国大蒜的农药使用不符合其标准。\\n\\n4. **政治和经济因素**：中美之间的贸易关系复杂多变，政治和经济因素也会影响美国对中国大蒜的态度。在某些情况下，安全威胁的指控可能被用作贸易谈判的筹码。\\n\\n5. **生物安全风险**：美国还可能担心中国大蒜携带病原体或害虫，这些生物安全风险可能会对美国本土农业生态系统造成威胁。\\n\\n需要注意的是，这些担忧并不一定代表中国大蒜确实存在安全问题，很多时候可能是基于预防原则和贸易保护的需要。实际上，中国大蒜在全球市场上享有较高的声誉，出口到多个国家和地区。\\n\\n具体案例和详细背景可能需要查阅相关的贸易文件和新闻报道来进一步了解。', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 285, 'prompt_tokens': 16, 'total_tokens': 301, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'glm-4-plus', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-de6b8601-19f4-471d-be00-633f161189df-0', usage_metadata={'input_tokens': 16, 'output_tokens': 285, 'total_tokens': 301, 'input_token_details': {}, 'output_token_details': {}})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +225,7 @@
     "base_url = os.getenv(\"ZHIPUAI_API_BASE\")\n",
     "\n",
     "\n",
-    "prompt = \"中国为什么对美国构成了比较大威胁?\"\n",
+    "prompt = \"美国为什么认为中国的大蒜对他们构成了安全威胁？\"\n",
     "\n",
     "llm = ChatOpenAI(api_key=api_key,\n",
     "             base_url=base_url,\n",
@@ -220,32 +239,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "中国并没有对美国构成威胁。相反，中国始终不渝走和平发展道路，致力于同各国发展友好合作关系，推动构建人类命运共同体。中国的发展对世界是机遇，不是威胁和挑战。\n",
+      "美国并没有普遍认为中国的大蒜对他们构成了安全威胁。实际上，中国是全球最大的大蒜生产国和出口国，美国是中国大蒜的主要出口市场之一。中美之间的大蒜贸易是正常的商业活动。\n",
       "\n",
-      "首先，中国坚持和平发展道路。中国始终将和平作为发展的基础，坚持通过和平方式解决国际争端和热点问题，反对一切形式的霸权主义和强权政治。\n",
+      "然而，在某些情况下，美国可能会对进口农产品进行安全检查，以确保它们符合美国的食品安全标准。这包括对农药残留、重金属含量等方面的检测。如果某些批次的中国大蒜被发现不符合这些标准，美国可能会采取相应的措施，如退货、销毁或限制进口。\n",
       "\n",
-      "其次，中国秉持共商共建共享的全球治理观，倡导国际关系民主化，坚持国家不分大小、强弱、贫富一律平等，支持各国根据本国国情选择发展道路。\n",
+      "需要注意的是，这种情况并不针对中国大蒜，而是适用于所有进口到美国的农产品。美国对食品安全的严格要求是为了保护本国消费者的健康。\n",
       "\n",
-      "关于中美关系，中方始终认为，中美作为两个大国，应该展现大国的担当，本着对历史、对人民、对世界负责的态度，处理好中美关系，为全球和平与发展作出贡献，为变乱交织的世界注入稳定性、确定性、建设性。\n",
+      "此外，有时贸易争端或政治因素也可能影响两国之间的农产品贸易，但这并不意味着中国的大蒜对美国构成了安全威胁。\n",
       "\n",
-      "因此，中国的发展对世界是机遇而非威胁，中国也从未对美国构成威胁。\n",
-      "\n",
-      "## 中美关系\n",
-      "\n",
-      "中方致力于维护中美关系稳定，对话与合作，推动中美关系健康稳定发展，造福两国和两国人民。\n",
-      "\n",
-      "中方敦促美方秉持客观理性的对华认知，同中方相向而行，维护好中美关系的政治基础，冷静、专业、理性处理意外事件，共同管控分歧，避免战略意外。\n",
-      "\n",
-      "中方致力于维护中美关系稳定，对话的大门始终敞开。\n",
-      "\n",
-      "请注意，以上内容仅供参考。您在实际撰写时需要结合具体、真实的语境。如果您有进一步具体的限定，欢迎在下一轮对话中提出。"
+      "总的来说，美国并没有普遍认为中国的大蒜对他们构成安全威胁，正常的贸易活动仍在进行。如果有关于食品安全的具体问题，通常是通过科学检测和贸易谈判来解决的。"
      ]
     }
    ],
