--- a/langchain/06-提示词案例选择器.ipynb
+++ b/langchain/06-提示词案例选择器.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "StringPromptValue(text='请根据示例，针对每个输入输出其反义词:\\n\\n\\nInput: happy\\nOutput: sad\\n\\nInput: tall\\nOutput: short\\n\\nInput: energetic\\nOutput: lethargic\\n\\nInput: sunny\\nOutput: gloomy\\n\\nInput: windy\\nOutput: calm\\n\\nInput: I am happy\\nOutput: ')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -180,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'兴高采烈的反义词可以是“垂头丧气”，表示情绪非常低落，完全没有精神的状态。\\n\\n所以：\\n\\nInput: 兴高采烈\\nOutput: 垂头丧气'"
+       "'垂头丧气'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,9 +227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/f5/wwjgctq529v381m5rw2lrfr00000gn/T/ipykernel_34341/3670414753.py:8: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embeddings = HuggingFaceEmbeddings(model_name=\"/Users/libing/kk_LLMs/bge-large-zh-v1.5\")\n",
+      "/Users/libing/miniconda3/envs/kk_langchain/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.prompts import PromptTemplate, FewShotPromptTemplate\n",
     "from langchain.prompts.example_selector import MaxMarginalRelevanceExampleSelector, SemanticSimilarityExampleSelector\n",
@@ -276,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -303,16 +314,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'得心应手\\n\\n请注意，“无可奈何”和“得心应手”并不是严格的反义词关系，因为前者表达的是没有办法、无奈的情绪或状态，而后者则表示做事顺手、称心如意的状态。在某些语境下，可能更合适用来表示与“无可奈何”相对立的一种情况或情绪。如果需要更精确的反义词，请提供具体场景以便给出更加合适的答案。'"
+       "'得心应手\\n\\n请注意，“无可奈何”与“得心应手”的对应并不是严格的反义关系，因为“无可奈何”表示一种对于情况无能为力的状态，而“得心应手”则形容做事情非常熟练、顺利。在某些语境下，可能更合适的选择是“无所不能”，这取决于具体上下文环境。'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -415,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'我的猫跑得快。  \\n\\nTo complete the task as specified, here is the translation for the last input:\\n\\nInput: My cat runs fast.\\nOutput: 我的猫跑得很快。'"
+       "'我的猫跑得很快。'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +447,7 @@
     "api_key = \"xxx\"\n",
     "base_url = \"http://localhost:1234/v1\"\n",
     "\n",
-    "llm = ChatOpenAI(api_key=api_key, base_url=base_url, temperature=0.9)\n",
+    "llm = ChatOpenAI(api_key=api_key, base_url=base_url, temperature=0.3)\n",
     "\n",
     "output_parser = StrOutputParser()\n",
     "\n",
